--- a/8-sampling-dist.qmd
+++ b/8-sampling-dist.qmd
@@ -2,11 +2,7 @@
 title: "8 Sampling and distributions"
 ---
 
-<center> 
-
-![Can you guess the weight of this bull?  What about you and 99 firends?](img/unsplash-bull.png)  
-
-</center>
+<center>![Can you guess the weight of this bull? What about you and 99 friends?](img/unsplash-bull.png)</center>
 
 <br>
 
@@ -16,13 +12,13 @@ title: "8 Sampling and distributions"
 
 **Overview**
 
-> I. A curve has been found representing the frequency distribution of standard deviations of samples drawn from a normal population.  
+> I. A curve has been found representing the frequency distribution of standard deviations of samples drawn from a normal population.
 
 > II. A curve has been found representing the frequency distribution of values of the means of such samples, when these values are measured from the mean of the population in terms of the standard deviation of the sample
 
 > \- Gosset. 1908, Biometrika 6:25.
 
-The idea of sampling underpins traditional statistics and is fundamental to the practice of statistics.  The basic idea is usually that there is a population of interest, which we cannot directly measure.  We sample the population in order to estimate the real measures of the population.  Because we merely take samples, there is error assiociated with our estimates and the error depends on both the real variation in the population, but also on chance to do with which subjects are actually in our sample, as well as the size of our sample.  Traditional statistical inference within Null Hypothesis Significance Testing (NHST) exploits our estimates of error associated with our samples. While this is an important concept, it is beyond the scope of this page to review it, but you may wish to refresh your knowledge by consulting a reference, such as [Irizarry 2020 Chs 13-16](https://learningstatisticswithr.com/book/).
+The idea of sampling underpins traditional statistics and is fundamental to the practice of statistics. The basic idea is usually that there is a population of interest, which we cannot directly measure. We sample the population in order to estimate the real measures of the population. Because we merely take samples, there is error assiociated with our estimates and the error depends on both the real variation in the population, but also on chance to do with which subjects are actually in our sample, as well as the size of our sample. Traditional statistical inference within Null Hypothesis Significance Testing (NHST) exploits our estimates of error associated with our samples. While this is an important concept, it is beyond the scope of this page to review it, but you may wish to refresh your knowledge by consulting a reference, such as [Irizarry 2020 Chs 13-16](https://learningstatisticswithr.com/book/).
 
 In this page, we will briefly look at some diagnostic tools in R for examining the distribution of data, and talk about a few important distributions that are common to encounter.
 
@@ -30,29 +26,29 @@ In this page, we will briefly look at some diagnostic tools in R for examining t
 
 ### 1.1 Objectives
 
-- Use of the histogram
+-   Use of the histogram
 
-- Gaussian: that ain't normal
+-   Gaussian: that ain't normal
 
-- Poisson
+-   Poisson
 
-- Binomial
+-   Binomial
 
-- Diagnosing the distribution
+-   Diagnosing the distribution
 
-- Practice exercises
+-   Practice exercises
 
 <br>
 
 ## 2 Use of the histogram
 
-The histogram is a graph type that typically plots a numeric variable on the x axis (either continuous numeric values, or integers), and has the frequency of observations on the y axis (i.e., the count), or sometimes the proportion of observation on the y axis. 
+The histogram is a graph type that typically plots a numeric variable on the x axis (either continuous numeric values, or integers), and has the frequency of observations on the y axis (i.e., the count), or sometimes the proportion of observation on the y axis.
 
 <br>
 
 ### 2.1 Typical histogram for continuous variable
 
-```r
+``` r
 # Try this:
 
 # Adult domestic cats weight approximately 4 Kg on average
@@ -64,7 +60,6 @@ help(set.seed) # If we use this, we can replicate "random data"
 
 help(hist)
 ```
-
 
 ```{r}
 set.seed(42)
@@ -82,25 +77,25 @@ hist(x = cats,
 
 Notice a few things:
 
-- The bars are the count of the number of cats at each weight on the x axis
+-   The bars are the count of the number of cats at each weight on the x axis
 
-- The width of each vertical column is a (non-overlapping) range of weights - these are called "bins" and can be defined, but usually are automatically determined based on the data
+-   The width of each vertical column is a (non-overlapping) range of weights - these are called "bins" and can be defined, but usually are automatically determined based on the data
 
-- For count data, each bar is usually one or more integer values, rather than a range of continuous values (as it is for cat weight above in the figure)
+-   For count data, each bar is usually one or more integer values, rather than a range of continuous values (as it is for cat weight above in the figure)
 
-- The shape of a histogram can be used to infer the distribution of the data 
+-   The shape of a histogram can be used to infer the distribution of the data
 
 <br>
 
 ### 2.2 Sampling and populations
 
-Remember the concept of population versus sample?  Well, let's assume there are only 10,000 cats in the whole world and we just measured the whole population (usually not possible, remember).  In this case we can calculate the exact population mean.
+Remember the concept of population versus sample? Well, let's assume there are only 10,000 cats in the whole world and we just measured the whole population (usually not possible, remember). In this case we can calculate the exact population mean.
 
-What if we tried to estimate the real mean of our population from a sample of around 100 cats? The theory is that our sample mean would be expected to differ from the real population mean randomly.  If we did a bunch of samples, most of the guesses would be close to the real population mean and less would be farther out, but all of these sample means would be expected to randomly vary, either less than or greater than the true population mean.  We can examine this with a **simulation of samples**.
+What if we tried to estimate the real mean of our population from a sample of around 100 cats? The theory is that our sample mean would be expected to differ from the real population mean randomly. If we did a bunch of samples, most of the guesses would be close to the real population mean and less would be farther out, but all of these sample means would be expected to randomly vary, either less than or greater than the true population mean. We can examine this with a **simulation of samples**.
 
 <br>
 
-```r
+``` r
 # Try this:
 # simulation of samples
 
@@ -132,24 +127,23 @@ hist(x = mymeans,
 abline(v = mean(mymeans), col = "red", lty = 2, lwd = 2)
 ```
 
-
 <br>
 
 Notice a few things (NB your results might look slightly different to mine - remember these are random samples):
 
-- The samples vary around the true mean of 4.0 Kg
+-   The samples vary around the true mean of 4.0 Kg
 
-- Most of the samples are pretty close to 4.0, fewer are farther away
+-   Most of the samples are pretty close to 4.0, fewer are farther away
 
-- The mean of the means is close to our true population mean
+-   The mean of the means is close to our true population mean
 
-Try our simulation a few more times, but vary the settings.  How does adjusting the sample size (say up to 100 or down to 10)?  How about the number of samples (say up to 1000 or down to 10)?
+Try our simulation a few more times, but vary the settings. How does adjusting the sample size (say up to 100 or down to 10)? How about the number of samples (say up to 1000 or down to 10)?
 
 <br>
 
 ## 3 Gaussian: That ain't necessarily normal!
 
-> The Gaussian distribution is sometimes referred to as the Normal distribution.  This is not a good practice: do not refer to the Gaussian distribution as the Normal distribution.  Referring to the Gaussian distribution as the normal distribution implies that Gaussian is "typical", which is patently untrue. 
+> The Gaussian distribution is sometimes referred to as the Normal distribution. This is not a good practice: do not refer to the Gaussian distribution as the Normal distribution. Referring to the Gaussian distribution as the normal distribution implies that Gaussian is "typical", which is patently untrue.
 
 > \- The Comic Book Guy, The Simpsons
 
@@ -157,12 +151,13 @@ Try our simulation a few more times, but vary the settings.  How does adjusting 
 
 The Gaussian distribution is the classic "Bell curve" shaped distribution. It is probably the most important distribution to master, because of its importance in several ways:
 
-- We expect **continuous numeric variables** that "measure" things to be Gaussian (e.g., human height, lamb weight, songbird wing length, Nitrogen content in legumes, etc., etc.)
+-   We expect **continuous numeric variables** that "measure" things to be Gaussian (e.g., human height, lamb weight, songbird wing length, Nitrogen content in legumes, etc., etc.)
 
-- Example data: length of chicken beaks in mm 
+-   Example data: length of chicken beaks in mm
 
-` R output `
-```r
+`R output`
+
+``` r
 # chicken beak lengths
 
  [1] 19.1 19.5 16.5 20.9 18.7 20.9 21.4 22.1 18.8 21.0 16.6 18.4 18.3 15.2 20.1 20.4
@@ -173,9 +168,9 @@ The Gaussian distribution is the classic "Bell curve" shaped distribution. It is
 
 ### 3.1 The Gaussian assumption (important topic)
 
-- For linear models like regression and ANOVA (we will review these models), we assume the *residuals* (the difference between each observation and the mean) to be Gaussian distributed and we often must test and evaluate this assumption
+-   For linear models like regression and ANOVA (we will review these models), we assume the *residuals* (the difference between each observation and the mean) to be Gaussian distributed and we often must test and evaluate this assumption
 
-- The Gaussian is described by 2 quantities: the **mean** and the **variance**
+-   The Gaussian is described by 2 quantities: the **mean** and the **variance**
 
 ```{r}
 # Example data
@@ -202,10 +197,9 @@ sqrt(var(myvar))
 
 ### 3.2 Gaussian histograms
 
-We can describe the expected perfect (i.e., theoretical) Gaussian distribution based just on the mean and variance.  The value of this mean and variance control the shape of the distribution.
+We can describe the expected perfect (i.e., theoretical) Gaussian distribution based just on the mean and variance. The value of this mean and variance control the shape of the distribution.
 
 <br>
-
 
 ![](img/2.2-gaussian.png)
 
@@ -261,14 +255,13 @@ legend(title = "mean (sd)",
 
 ```
 
-
 <br>
 
 ### 3.4 Quartile-Quartile (Q-Q) plots
 
-It is very often that you might want a peek or even more formally test whether data are Gaussian.  This might be in a situation when looking at, for example, the residuals for a linear model to test whether they adhere to the assumption of a Gaussian distribution.  In that case, a common diagnostic graph to construct is the quantile-quantile, or ["q-q"" Gaussian plot](https://data.library.virginia.edu/understanding-q-q-plots). 
+It is very often that you might want a peek or even more formally test whether data are Gaussian. This might be in a situation when looking at, for example, the residuals for a linear model to test whether they adhere to the assumption of a Gaussian distribution. In that case, a common diagnostic graph to construct is the quantile-quantile, or ["q-q"" Gaussian plot](https://data.library.virginia.edu/understanding-q-q-plots).
 
-The q-q Gaussian plot your data again the theoretical expectation of the "quantile", or percentile, were your data perfectly Gaussian (a straight, diagonal line).  Remember, samples are not necessarily expected to perfectly conform to Gaussian (due to sampling error), even if the population from which the sample was taken were to be perfectly Gaussian.  Thus, this is a way to **confront your data with a model**, to help be completely informed.  The degree to which your data deviates from the line (especially systematic deviation at the ends of the line of expectation), is the degree to which is deviates from Gaussian.
+The q-q Gaussian plot your data again the theoretical expectation of the "quantile", or percentile, were your data perfectly Gaussian (a straight, diagonal line). Remember, samples are not necessarily expected to perfectly conform to Gaussian (due to sampling error), even if the population from which the sample was taken were to be perfectly Gaussian. Thus, this is a way to **confront your data with a model**, to help be completely informed. The degree to which your data deviates from the line (especially systematic deviation at the ends of the line of expectation), is the degree to which is deviates from Gaussian.
 
 <br>
 
@@ -317,20 +310,19 @@ par(mfrow = c(1,1)) # set graph grid back
 
 ## 4 Poisson distribution
 
-> Life is good for only two things, discovering mathematics and teaching mathematics. 
+> Life is good for only two things, discovering mathematics and teaching mathematics.
 
 > \- Simeon-Denis Poisson
 
-The description of the **Poisson distribution** was credited to Simeon-Denis Poisson, 
-a (very, very) passionate mathematician.  The classic example for use is for count data, where famously it was exemplified by the number of Prussian soldiers who were killed by being kicked by a horse in a particular year. 
+The description of the **Poisson distribution** was credited to Simeon-Denis Poisson, a (very, very) passionate mathematician. The classic example for use is for count data, where famously it was exemplified by the number of Prussian soldiers who were killed by being kicked by a horse in a particular year.
 
 <br>
 
 ### 4.1 The Poisson distribution
 
-- Count data of discrete events, objects, etc.
+-   Count data of discrete events, objects, etc.
 
-- Integers, for example the number of beetles caught each day in a pitfall trap: 
+-   Integers, for example the number of beetles caught each day in a pitfall trap:
 
 ```{r}
 rpois(20, 4)
@@ -338,9 +330,9 @@ rpois(20, 4)
 
 <br>
 
-- Poisson data are typically skewed to the right
+-   Poisson data are typically skewed to the right
 
-- Described by a single parameter, $\lambda$ (lambda), which describes the mean **and** the variance
+-   Described by a single parameter, $\lambda$ (lambda), which describes the mean **and** the variance
 
 <br>
 
@@ -408,15 +400,13 @@ legend(title = "lambda",
        x = 8, y = .35)
 ```
 
-
-
 <br>
 
-## 5  Binomial
+## 5 Binomial
 
 > When faced with 2 choices, simply toss a coin. It works not because it settles the question for you, but because in that brief moment when the coin is in the air you suddenly know what you are hoping for.
 
-The **Binomial distribution** describes data that has exactly 2 outcomes: 0 and 1, Yes and No, True and False, etc. (you get the idea).  
+The **Binomial distribution** describes data that has exactly 2 outcomes: 0 and 1, Yes and No, True and False, etc. (you get the idea).
 
 Examples of this kind of data include things like flipping a coin (heads or tails), successful germination of seeds (success or failure), or binary behavioral decisions (remain or disperse)
 
@@ -424,9 +414,9 @@ Examples of this kind of data include things like flipping a coin (heads or tail
 
 ### 5.1 The Binomial distribution:
 
-- Data are the count of "successes"" in (binary) outcomes of a series of independent events
+-   Data are the count of "successes"" in (binary) outcomes of a series of independent events
 
-- Data coding can be variable, but an example would be success for failure while surveying for wildlife: check this nestbox; [is there at least one dormouse (*Muscardinus avellanarius*) in it?](https://nbn.org.uk/biological-recording-scheme/the-national-dormouse-monitoring-programme-ndmp/).  
+-   Data coding can be variable, but an example would be success for failure while surveying for wildlife: check this nestbox; [is there at least one dormouse (*Muscardinus avellanarius*) in it?](https://nbn.org.uk/biological-recording-scheme/the-national-dormouse-monitoring-programme-ndmp/).
 
 ### 5.2 Ex 1 nest boxes
 
@@ -446,7 +436,6 @@ mosaicplot(table(my_occ), col = c(2,'goldenrod'))
 
 ```
 
-
 <br>
 
 ### 5.3 Ex 2 Flipping a coin: 20 people 10 times each
@@ -461,14 +450,11 @@ set.seed(42)
 
 mosaicplot(table(coin), col = 1:unique(coin))
 
-```      
-
+```
 
 <br>
 
 Described by 2 parameters, The number of trials with a binary outcome in a single "experiment" ($n$), and the probability of success for each binary outcome ($p$).
-
-
 
 <br>
 
@@ -527,40 +513,37 @@ legend(title = "Parameters",
        x = 11, y = .35)
 ```
 
-
 <br>
 
 ## 6 Diagnosing the distribution
 
 > A very common task faced when handling data is "diagnosing the distribution". Just like a human doctor diagnosing an ailment, you examine the evidence, consider the alternatives, judge the context, and take an educated guess.
 
-There are statistical tests to compare data to a theoretical model, and they can be useful, but diagnosing a statistical distribution is principally a subjective endeavor.  A common situation would be to examine the residual distribution for a regression model compared to the expected Gaussian distribution. Good practice is to have a set of steps to adhere to when diagnosing a distribution.
+There are statistical tests to compare data to a theoretical model, and they can be useful, but diagnosing a statistical distribution is principally a subjective endeavor. A common situation would be to examine the residual distribution for a regression model compared to the expected Gaussian distribution. Good practice is to have a set of steps to adhere to when diagnosing a distribution.
 
-- First, develop an **expectation of the distribution**, based on the type of data
+-   First, develop an **expectation of the distribution**, based on the type of data
 
-- Second **graph the data**, almost always with a histogram, and a q-q plot with a theoretical quartile line for comparison 
+-   Second **graph the data**, almost always with a histogram, and a q-q plot with a theoretical quartile line for comparison
 
-- Third, compare q-q plots with different distributions for comparison if in doubt, and if it makes sense to do so!
+-   Third, compare q-q plots with different distributions for comparison if in doubt, and if it makes sense to do so!
 
-- If the assumption of a particular distribution is important (like Gaussian residuals), try transformation and compare, e.g., log(your-data), cuberoot(your-data), or others, to the Gaussian q-q expectation.
+-   If the assumption of a particular distribution is important (like Gaussian residuals), try transformation and compare, e.g., log(your-data), cuberoot(your-data), or others, to the Gaussian q-q expectation.
 
 <br>
 
-It is beyond the intention of this page to examine all the possibilities of examining and diagnosing data distributions, but instead the intention is to alert readers that this topic is wide and deep.  Here are a few good resources that can take you farther:
+It is beyond the intention of this page to examine all the possibilities of examining and diagnosing data distributions, but instead the intention is to alert readers that this topic is wide and deep. Here are a few good resources that can take you farther:
 
 [Vitto Ricci, Fitting distributions with R](https://cran.r-project.org/doc/contrib/Ricci-distributions-en.pdf)
 
-[Bill Huber, Fitting distributions to data](http://www.quantdec.com/envstats/misc/Fitting%20data%20to%20distributions.pdf)
-[Quick-R, Probability plots](https://www.statmethods.net/advgraphs/probability.html)
+[Bill Huber, Fitting distributions to data](http://www.quantdec.com/envstats/misc/Fitting%20data%20to%20distributions.pdf) [Quick-R, Probability plots](https://www.statmethods.net/advgraphs/probability.html)
 
 <br>
-
 
 ## 7 Practice exercises
 
 For the following exercises, run the code below to create the data oibject `dat`.
 
-```r
+``` r
 # The code below loads and prints the data frame "dat"
 
 # Data dictionary for "dat", a dataset with different measures of 20 sheep
@@ -586,34 +569,31 @@ For the following exercises, run the code below to create the data oibject `dat`
 
 <br>
 
-### 7.1 
+### 7.1
 
-Do you expect `weight` to be Gaussian distributed?  How about `ked`?  Explain your answer for each. 
-<br>
+Do you expect `weight` to be Gaussian distributed? How about `ked`? Explain your answer for each. <br>
 
 ### 7.2
 
-Show the code to graphically diagnose and decide whether `weight` is Gaussian and explain your conclusion. 
+Show the code to graphically diagnose and decide whether `weight` is Gaussian and explain your conclusion.
 
 <br>
 
 ### 7.3
 
-Show the code to graphically diagnose and decide whether `ked` is Gaussian and explain your conclusion.  If you choose another likely distribution, test it as well and similarly diagnose.
+Show the code to graphically diagnose and decide whether `ked` is Gaussian and explain your conclusion. If you choose another likely distribution, test it as well and similarly diagnose.
 
 <br>
 
 ### 7.4
 
-Explore whether `trough` is Gaussian, and explain whether you expect it to be so.  If not, does transforming the data "persuade it" to conform to Gaussian?  Discuss.
-
+Explore whether `trough` is Gaussian, and explain whether you expect it to be so. If not, does transforming the data "persuade it" to conform to Gaussian? Discuss.
 
 <br>
 
 ### 7.5
 
 Write a plausible practice question involving any aspect of graphical diagnosis of a data distribution using the `iris` data.
-
 
 <br>
 
